--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
-dock_3_selected_tab_idx=0
+dock_3_selected_tab_idx=1
 dock_4_selected_tab_idx=0
 dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
@@ -20,8 +20,8 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<Updatedupstreamdock_filesystem_selected_paths=PackedStringArray("res://main.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/")
-dock_filesystem_selected_paths=PackedStringArray("res://tutorial.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/", "res://Player/Sola_Walk_Frames/", "res://Music/", "res://Art/")
+dock_filesystem_selected_paths=PackedStringArray("res://Music/spooky.mp3")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -30,7 +30,7 @@ dock_5="Inspector,Node,History"
 
 <<<<<<<HEADopen_scenes=PackedStringArray("res://light_beam.tscn", "res://hud.tscn", "res://Player/sola.tscn", "res://mob2.tscn", "res://Lamp.tscn")
 <<<<<<<Updatedupstreamcurrent_scene="res://Mobs/mob.tscn"
-open_scenes=PackedStringArray("res://main.tscn", "res://mob2.tscn", "res://hud.tscn", "res://next_level.tscn", "res://title.tscn", "res://tutorial.tscn")
+open_scenes=PackedStringArray("res://mob2.tscn", "res://hud.tscn", "res://next_level.tscn", "res://title.tscn", "res://tutorial.tscn", "res://main.tscn", "res://Player/sola.tscn", "res://Lamp.tscn")
 current_scene="res://tutorial.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
@@ -39,7 +39,7 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://hud.gd", "res://main.gd", "res://mob2.gd", "res://next_level.gd", "res://title.gd", "res://tutorial.gd"]
+open_scripts=["res://hud.gd", "res://Lamp.gd", "res://main.gd", "res://mob2.gd", "res://next_level.gd", "res://Player/sola.gd", "res://title.gd", "res://tutorial.gd"]
 selected_script="res://tutorial.gd"
 open_help=[]
 script_split_offset=140
