--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -20,8 +20,8 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<Updatedupstreamdock_filesystem_selected_paths=PackedStringArray("res://main.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/", "res://Player/Sola_Walk_Frames/", "res://Music/", "res://Art/")
-dock_filesystem_selected_paths=PackedStringArray("res://Music/spooky.mp3")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/Sola_Walk_Frames/")
+dock_filesystem_selected_paths=PackedStringArray("res://level_2.tscn")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -30,17 +30,17 @@ dock_5="Inspector,Node,History"
 
 <<<<<<<HEADopen_scenes=PackedStringArray("res://light_beam.tscn", "res://hud.tscn", "res://Player/sola.tscn", "res://mob2.tscn", "res://Lamp.tscn")
 <<<<<<<Updatedupstreamcurrent_scene="res://Mobs/mob.tscn"
-open_scenes=PackedStringArray("res://mob2.tscn", "res://hud.tscn", "res://next_level.tscn", "res://title.tscn", "res://tutorial.tscn", "res://main.tscn", "res://Player/sola.tscn", "res://Lamp.tscn")
-current_scene="res://tutorial.tscn"
+open_scenes=PackedStringArray("res://mob2.tscn", "res://hud.tscn", "res://next_level.tscn", "res://title.tscn", "res://tutorial.tscn", "res://main.tscn", "res://Player/sola.tscn", "res://Lamp.tscn", "res://gameover.tscn", "res://level_2.tscn")
+current_scene="res://level_2.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://hud.gd", "res://Lamp.gd", "res://main.gd", "res://mob2.gd", "res://next_level.gd", "res://Player/sola.gd", "res://title.gd", "res://tutorial.gd"]
-selected_script="res://tutorial.gd"
+open_scripts=["res://gameover.gd", "res://hud.gd", "res://Lamp.gd", "res://level_2.gd", "res://main.gd", "res://mob2.gd", "res://next_level.gd", "res://Player/sola.gd", "res://title.gd", "res://tutorial.gd"]
+selected_script="res://level_2.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
