--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -6,13 +6,13 @@ state={
 "column": 6,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 50,
-"scroll_position": 95.0,
+"row": 12,
+"scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 2,
-"selection_from_line": 50,
+"selection_from_line": 12,
 "selection_to_column": 6,
-"selection_to_line": 50,
+"selection_to_line": 12,
 "syntax_highlighter": "GDScript"
 }
 
@@ -35,12 +35,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
+"column": 56,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
+"row": 20,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 2,
+"selection_from_line": 20,
+"selection_to_column": 56,
+"selection_to_line": 20,
 "syntax_highlighter": "GDScript"
 }
 
@@ -49,12 +53,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 56,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
-"scroll_position": 5.0,
-"selection": false,
+"row": 15,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 3,
+"selection_from_line": 15,
+"selection_to_column": 56,
+"selection_to_line": 15,
 "syntax_highlighter": "GDScript"
 }
 
@@ -63,11 +71,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 5,
+"column": 15,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
-"scroll_position": 0.0,
+"row": 46,
+"scroll_position": 39.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -81,7 +89,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 23,
-"scroll_position": 11.0,
+"scroll_position": 23.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -95,12 +103,40 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 74,
-"scroll_position": 67.0,
+"scroll_position": 75.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
 [res://Lamp.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://gameover.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 44,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 10,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://level_2.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
