--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 6,
-"folded_lines": Array[int]([]),
+"column": 21,
+"folded_lines": Array[int]([50]),
 "h_scroll_position": 0,
-"row": 12,
-"scroll_position": 0.0,
+"row": 74,
+"scroll_position": 108.0,
 "selection": true,
-"selection_from_column": 2,
-"selection_from_line": 12,
-"selection_to_column": 6,
-"selection_to_line": 12,
+"selection_from_column": 12,
+"selection_from_line": 74,
+"selection_to_column": 21,
+"selection_to_line": 74,
 "syntax_highlighter": "GDScript"
 }
 
@@ -25,7 +25,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 0,
-"scroll_position": 0.0,
+"scroll_position": 39.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -71,12 +71,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 13,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 46,
-"scroll_position": 39.0,
-"selection": false,
+"row": 15,
+"scroll_position": 7.0,
+"selection": true,
+"selection_from_column": 6,
+"selection_from_line": 15,
+"selection_to_column": 13,
+"selection_to_line": 15,
 "syntax_highlighter": "GDScript"
 }
 
@@ -99,11 +103,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 50,
+"column": 51,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 74,
-"scroll_position": 75.0,
+"row": 78,
+"scroll_position": 69.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -127,12 +131,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 44,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 10,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 10,
+"selection_to_column": 51,
+"selection_to_line": 10,
 "syntax_highlighter": "GDScript"
 }
 
@@ -141,11 +149,43 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
+"row": 62,
+"scroll_position": 64.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://win.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 51,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 14,
 "scroll_position": 0.0,
 "selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Mobs/mob.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 16,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 6,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 13,
+"selection_from_line": 6,
+"selection_to_column": 16,
+"selection_to_line": 6,
 "syntax_highlighter": "GDScript"
 }
