--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,15 +3,15 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
+"column": 33,
 "folded_lines": Array[int]([50]),
 "h_scroll_position": 0,
 "row": 74,
-"scroll_position": 108.0,
+"scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 12,
+"selection_from_column": 22,
 "selection_from_line": 74,
-"selection_to_column": 21,
+"selection_to_column": 33,
 "selection_to_line": 74,
 "syntax_highlighter": "GDScript"
 }
@@ -93,7 +93,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 23,
-"scroll_position": 23.0,
+"scroll_position": 10.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -107,7 +107,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 78,
-"scroll_position": 69.0,
+"scroll_position": 67.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -149,10 +149,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 53,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 62,
+"row": 72,
 "scroll_position": 64.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -172,7 +172,7 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Mobs/mob.gd]
+[res://mob.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
