--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -9,7 +9,7 @@ list=Array[Dictionary]([{
 "class": &"Mob",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Mobs/mob.gd"
+"path": "res://mob.gd"
 }, {
 "base": &"RigidBody2D",
 "class": &"Mob2",
