--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -21,7 +21,7 @@ dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<Updatedupstreamdock_filesystem_selected_paths=PackedStringArray("res://main.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://")
-dock_filesystem_selected_paths=PackedStringArray("res://tutorial.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Lamp.tscn")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -30,17 +30,17 @@ dock_5="Inspector,Node,History"
 
 <<<<<<<HEADopen_scenes=PackedStringArray("res://light_beam.tscn", "res://hud.tscn", "res://Player/sola.tscn", "res://mob2.tscn", "res://Lamp.tscn")
 <<<<<<<Updatedupstreamcurrent_scene="res://Mobs/mob.tscn"
-open_scenes=PackedStringArray("res://main.tscn", "res://level_2.tscn", "res://next_level.tscn", "res://Player/sola.tscn", "res://gameover.tscn", "res://win.tscn", "res://hud.tscn", "res://mob.tscn", "res://mob2.tscn", "res://tutorial.tscn")
-current_scene="res://tutorial.tscn"
+open_scenes=PackedStringArray("res://main.tscn", "res://level_2.tscn", "res://next_level.tscn", "res://Player/sola.tscn", "res://gameover.tscn", "res://win.tscn", "res://hud.tscn", "res://mob.tscn", "res://mob2.tscn", "res://tutorial.tscn", "res://Lamp.tscn")
+current_scene="res://main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://gameover.gd", "res://hud.gd", "res://Lamp.gd", "res://level_2.gd", "res://main.gd", "res://mob2.gd", "res://mob.gd", "res://next_level.gd", "res://Player/sola.gd", "res://title.gd", "res://tutorial.gd", "res://win.gd"]
-selected_script="res://tutorial.gd"
+selected_script="res://main.gd"
 open_help=["Node"]
 script_split_offset=140
 list_split_offset=0
