--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -31,16 +31,16 @@ dock_5="Inspector,Node,History"
 <<<<<<<HEADopen_scenes=PackedStringArray("res://light_beam.tscn", "res://hud.tscn", "res://Player/sola.tscn", "res://mob2.tscn", "res://Lamp.tscn")
 <<<<<<<Updatedupstreamcurrent_scene="res://Mobs/mob.tscn"
 open_scenes=PackedStringArray("res://main.tscn", "res://level_2.tscn", "res://next_level.tscn", "res://Player/sola.tscn", "res://gameover.tscn", "res://win.tscn", "res://hud.tscn", "res://mob.tscn", "res://mob2.tscn", "res://tutorial.tscn", "res://Lamp.tscn")
-current_scene="res://main.tscn"
+current_scene="res://tutorial.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://gameover.gd", "res://hud.gd", "res://Lamp.gd", "res://level_2.gd", "res://main.gd", "res://mob2.gd", "res://mob.gd", "res://next_level.gd", "res://Player/sola.gd", "res://title.gd", "res://tutorial.gd", "res://win.gd"]
-selected_script="res://main.gd"
+selected_script="res://tutorial.gd"
 open_help=["Node"]
 script_split_offset=140
 list_split_offset=0
