--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -31,7 +31,7 @@ dock_5="Inspector,Node,History"
 <<<<<<<HEADopen_scenes=PackedStringArray("res://light_beam.tscn", "res://hud.tscn", "res://Player/sola.tscn", "res://mob2.tscn", "res://Lamp.tscn")
 <<<<<<<Updatedupstreamcurrent_scene="res://Mobs/mob.tscn"
 open_scenes=PackedStringArray("res://main.tscn", "res://level_2.tscn", "res://tutorial.tscn", "res://hud.tscn", "res://Lamp.tscn", "res://Player/sola.tscn", "res://mob.tscn", "res://mob2.tscn", "res://next_level.tscn", "res://win.tscn")
-current_scene="res://tutorial.tscn"
+current_scene="res://mob2.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -40,7 +40,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://gameover.gd", "res://hud.gd", "res://Lamp.gd", "res://level_2.gd", "res://main.gd", "res://mob2.gd", "res://mob.gd", "res://next_level.gd", "res://Player/sola.gd", "res://title.gd", "res://tutorial.gd", "res://win.gd"]
-selected_script="res://tutorial.gd"
+selected_script="res://mob2.gd"
 open_help=["Node"]
 script_split_offset=140
 list_split_offset=0
