--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,16 +12,16 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=346
-dock_hsplit_3=-322
+dock_hsplit_2=506
+dock_hsplit_3=-432
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<Updatedupstreamdock_filesystem_selected_paths=PackedStringArray("res://main.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Mobs/")
-dock_filesystem_selected_paths=PackedStringArray("res://Mobs/squirrel_sprite_5.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/")
+dock_filesystem_selected_paths=PackedStringArray("res://Player/Sola_Cutout (2).png")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -30,8 +30,8 @@ dock_5="Inspector,Node,History"
 
 <<<<<<<HEADopen_scenes=PackedStringArray("res://main.tscn", "res://level_2.tscn", "res://level_3.tscn", "res://Player/sola.tscn", "res://win.tscn", "res://gameover.tscn", "res://Lamp.tscn", "res://mob.tscn", "res://mob2.tscn", "res://mob3.tscn")
 <<<<<<<Updatedupstreamcurrent_scene="res://Mobs/mob.tscn"
-open_scenes=PackedStringArray("res://main.tscn", "res://level_2.tscn", "res://level_3.tscn", "res://Player/sola.tscn", "res://win.tscn", "res://gameover.tscn", "res://Lamp.tscn", "res://mob.tscn", "res://mob2.tscn", "res://mob3.tscn")
-current_scene="res://main.tscn"
+open_scenes=PackedStringArray("res://tutorial.tscn", "res://main.tscn", "res://level_2.tscn", "res://level_3.tscn", "res://dialogue.tscn", "res://mob.tscn", "res://Player/sola.tscn")
+current_scene="res://tutorial.tscn"
 center_split_offset=0
 selected_bottom_panel_item=0
 selected_default_debugger_tab_idx=0
@@ -39,8 +39,8 @@ selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://gameover.gd", "res://hud.gd", "res://Lamp.gd", "res://level_2.gd", "res://level_3.gd", "res://main.gd", "res://mob2.gd", "res://mob3.gd", "res://mob.gd", "res://next_level.gd", "res://Player/sola.gd", "res://title.gd", "res://tutorial.gd", "res://win.gd"]
-selected_script="res://main.gd"
+open_scripts=["res://dialogue.gd", "res://gameover.gd", "res://hud.gd", "res://Lamp.gd", "res://level_2.gd", "res://level_3.gd", "res://main.gd", "res://mob2.gd", "res://mob3.gd", "res://mob.gd", "res://next_level.gd", "res://Player/sola.gd", "res://title.gd", "res://tutorial.gd", "res://win.gd"]
+selected_script="res://tutorial.gd"
 open_help=["Node"]
 script_split_offset=140
 list_split_offset=0
