--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,16 +20,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Mobs/squirrel_vertical_3.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Mobs/")
+dock_filesystem_selected_paths=PackedStringArray("res://Player/girlpain.mp3")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://level_2.tscn", "res://level_3.tscn", "res://Player/sola.tscn", "res://win.tscn", "res://gameover.tscn", "res://Lamp.tscn", "res://mob.tscn", "res://mob2.tscn", "res://mob3.tscn")
-current_scene="res://mob3.tscn"
+open_scenes=PackedStringArray("res://main.tscn", "res://level_2.tscn", "res://level_3.tscn", "res://mob.tscn", "res://mob2.tscn", "res://mob3.tscn", "res://hud.tscn", "res://global.tscn", "res://Player/sola.tscn")
+current_scene="res://main.tscn"
 center_split_offset=0
 selected_bottom_panel_item=0
 selected_default_debugger_tab_idx=0
@@ -37,8 +37,8 @@ selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://gameover.gd", "res://hud.gd", "res://Lamp.gd", "res://level_2.gd", "res://level_3.gd", "res://main.gd", "res://mob2.gd", "res://mob3.gd", "res://mob.gd", "res://next_level.gd", "res://Player/sola.gd", "res://title.gd", "res://tutorial.gd", "res://win.gd"]
-selected_script="res://mob3.gd"
+open_scripts=["res://gameover.gd", "res://Global.gd", "res://hud.gd", "res://Lamp.gd", "res://level_2.gd", "res://level_3.gd", "res://main.gd", "res://mob2.gd", "res://mob3.gd", "res://mob.gd", "res://next_level.gd", "res://Player/sola.gd", "res://title.gd", "res://tutorial.gd", "res://win.gd"]
+selected_script="res://main.gd"
 open_help=["Node"]
 script_split_offset=140
 list_split_offset=0
